[metadata]
name = yaml-axis-parser
version = 0.0.1
author = Ray Douglass
author_email = ray@raydouglass.com
description = Tool to output yaml axis combinations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raydouglass/yaml-axis-parser
project_urls =
    Bug Tracker = https://github.com/raydouglass/yaml-axis-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yaml-axis-parser = yaml_axis_parser:main